--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Fullstack Developer</h2>
         <p>As a full-stack developer, I thrive on the intersection of creativity and logic. My journey began with a passion for problem-solving, and over time, I’ve honed my skills in both front-end and back-end development. Whether it’s crafting elegant user interfaces or architecting robust server-side solutions, I relish the challenge of building seamless digital experiences. My toolkit includes languages like JavaScript, Python, and Java, along with frameworks like React and Node.js. When I’m not immersed in code, you’ll find me exploring new technologies, collaborating with fellow developers, and turning coffee into functional software. </p>
-        <a href="./Download Resume/Odur-Samuel-CV.pdf" download="w3logo">Download Resume</a>
+        <a href="./Download Resume/Odur-Samuel-CV.pdf" download="mycvSamOdur">Download Resume</a>
       </div>
     </div>
   </section>
